included py version in matrix

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,10 +3,19 @@ on: push
 
 jobs:
   test_project:
+  strategy:
+      fail-fast: false
+      matrix:
+      python-version: ["3.8", "3.9", "3.10", "3.11.0-beta.3"]
+    
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+
+    - name: Set up python
     - uses: actions/setup-python@v2
+      with: 
+        python-version: ${{ matrix.python-version }}
     - name: Run Django unit tests
       run:
         pip install --user django
