--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Checkout VM
     - uses: actions/checkout@v2
+      with:
+        fetch-depth: 2
 
     - name: Set up python
     - uses: actions/setup-python@v2
