--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Set up python
     - uses: actions/setup-python@v2
       with: 
-        python-version: ["3.8", "3.9", "3.10", "3.11.0-beta.3"]
+        python-version: 3.8
     - name: Run Django unit tests
       run:
         pip install --user django
