--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,14 +8,14 @@ jobs:
 
     steps:
     - name: Checkout VM
-    - uses: actions/checkout@v2
+      uses: actions/checkout@v2
       with:
         fetch-depth: 2
 
     - name: Set up python
-    - uses: actions/setup-python@v2
+      uses: actions/setup-python@v2
       with: 
-        python-version: 3.8
+        python-version: ["3.8", "3.9", "3.10", "3.11.0-beta.3"]
     - name: Run Django unit tests
       run:
         pip install --user django
