--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,4 +16,4 @@ jobs:
         python-version: 3.8
     - name: Run Django unit tests
       run:
-        pip install --user django && python manage.py test
+        pip install --user django && python aBlog/manage.py test
